haproxy/deploy-app-spring-desafio/ingress-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: spring-app
  name: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: spring-app
  template:
    metadata:
      labels:
        run: spring-app
    spec:
      containers:
      - name: spring-app
        image: leoviana00/app-spring
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: spring-app
  name: spring-app
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    run: spring-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-app-ingress
  namespace: default
spec:
  rules:
  - host: desafio.spring
    http:
      paths:
      - path: /desafio
        backend:
          serviceName: spring-app
          servicePort: 8080
